@@ -170,6 +170,12 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
+                    <!--
+                        Explicitly enable annotation processing.
+                        https://inside.java/2023/07/29/quality-heads-up/
+                        https://github.com/quarkusio/quarkus/issues/37532
+                    -->
+                    <compilerArgument>-proc:full</compilerArgument>
                     <parameters>${maven.compiler.parameters}</parameters>
                 </configuration>
             </plugin>
